# cmake-qml-plugin-example

./: .gitignore  CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/my/plugin/example/: CMakeLists.txt  MyQml.qml  MyScript.js  MyScript.jsc  plugin.qmltypes  plugin.qrc
src/: main.cpp
src/qml/: main.qml
